# fastApiProb

./: .gitignore  database.db  pyproject.toml
data/excel/: comprasNov.xlsx
data/pdf/: Untitled.sql
src/fastapiprob/: database.py  main.py  models.py  pdf_service.py  seed_users.py  settings.py
src/fastapiprob/routes/: auth.py  documents.py
